// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCounterParty receive matches snapshot 1`] = `
<div
  className="css-text-901oao css-textOneLine-bfa6kz"
  dir="auto"
  style={
    Object {
      "color": "rgba(85,85,85,1.00)",
      "fontSize": "16px",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "fontSize": "8px",
        "fontWeight": "500",
      }
    }
  >
    From
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
      }
    }
  >
     Misao Matimbo
  </span>
</div>
`;

exports[`EventCounterParty send matches snapshot 1`] = `
<div
  className="css-text-901oao css-textOneLine-bfa6kz"
  dir="auto"
  style={
    Object {
      "color": "rgba(85,85,85,1.00)",
      "fontSize": "16px",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "fontSize": "8px",
        "fontWeight": "500",
      }
    }
  >
    To
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
      }
    }
  >
     Misao Matimbo
  </span>
</div>
`;

exports[`EventCounterParty withdraw matches snapshot 1`] = `
<div
  className="css-text-901oao css-textOneLine-bfa6kz"
  dir="auto"
  style={
    Object {
      "color": "rgba(85,85,85,1.00)",
      "fontSize": "16px",
      "textTransform": "capitalize",
    }
  }
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "fontSize": "8px",
        "fontWeight": "500",
      }
    }
  >
    From
    :
  </span>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
    dir="auto"
    style={
      Object {
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
      }
    }
  >
     Misao Matimbo
  </span>
</div>
`;
